# java2python

./: .gitignore  AUTHORS  BUILDTIME_XTC  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  bootstrap  config.status  configure  configure.ac  expression.str  helpers.str  install_on_debian_lenny.sh  j2py.pc.in  j2py.spec.in  java-front.pc  java-front.pc.in  java-front.spec  java-front.spec.in  libtool  literal.str  main.str  rebuild.sh  statement.str
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
class/: method-declaration.str
config/.svn/: all-wcprops  entries
contrib/python/: README.md  fixjava.py  fixnames.py  j2py.py  simplify.py  transform_all.sh
examples/.svn/: all-wcprops  entries
examples/stratego-java/: class-gen.str
j2py/: .gitignore  addinit.py  aterm-test.py  config.py  enum.py  fix_annonclass.py  fix_expressions.py  fix_values.py  fixcomments.py  fixenum.py  fixnames.py  fixstradd.py  j2py.py  java.py  java2py.py  java2py.yaml  java_front.py  pkginfo.py  pythonize.py  rename.py  rename_methods.py  renameids.py  run.py  simplify.py  transform.sh  transform_all.sh  translatepackages.py  translatepackages.yaml
j2py/aterm/: __init__.py  aterm.py
j2py/java/: __init__.py  annotation.py  decorators.py  helpers.py  java.py  objects.py  util.py
j2py/lib/: enum.py
j2py/test/: .gitignore  dnd.java  locals1.java
lib/: Makefile  Makefile.am  Makefile.in  javafront.str  libjava-front.ctree.dep  libjava-front.rtree.dep
lib/.deps/: libjava_front_la-libjava-front.Plo
lib/.svn/: all-wcprops  entries
lib/java/: parse.str  pretty-print2py.str  pretty-print2py.str~
news-archive/: Makefile  Makefile.am  Makefile.in
news-archive/.svn/: all-wcprops  entries
syntax/: Makefile  Makefile.am  Makefile.in  Makefile.xt  MakefileData.xt  aclocal.m4  autoxt.m4  bootstrap  config.status  configure  configure.ac
syntax-embedding/: Java-15.str  Java-EBlock.str  Makefile  Makefile.am  Makefile.in  Stratego-Java-15.sdf  Stratego-Java-EBlock.sdf
syntax-embedding/.svn/: all-wcprops  entries
syntax-embedding/.svn/text-base/: Java-EBlock.sdf.svn-base
syntax-embedding/languages/.svn/: all-wcprops  entries
syntax-embedding/languages/java/.svn/: all-wcprops  entries
syntax-embedding/languages/java/eblock/.svn/: all-wcprops  entries
syntax/.svn/: all-wcprops  entries
syntax/autom4te.cache/: output.0  requests  traces.0  (+1 more)
syntax/src/: Makefile  Makefile.am  Makefile.in
syntax/src/.svn/: all-wcprops  entries
syntax/src/.svn/text-base/: Java-15.sdf.svn-base
syntax/src/languages/.svn/: all-wcprops  entries
syntax/src/languages/java/: JavaMix.sdf
syntax/src/languages/java-15/.svn/: all-wcprops  entries
syntax/src/languages/java-15/arrays/.svn/: all-wcprops  entries
syntax/src/languages/java-15/classes/.svn/: all-wcprops  entries
syntax/src/languages/java-15/expressions/.svn/: all-wcprops  entries
syntax/src/languages/java-15/interfaces/.svn/: all-wcprops  entries
syntax/src/languages/java-15/lexical/.svn/: all-wcprops  entries
syntax/src/languages/java-15/lexical/literals/.svn/: all-wcprops  entries
syntax/src/languages/java-15/names/.svn/: all-wcprops  entries
syntax/src/languages/java-15/statements/.svn/: all-wcprops  entries
syntax/src/languages/java-15/types/.svn/: all-wcprops  entries
syntax/src/languages/java/.svn/: all-wcprops  entries
test/: Makefile  Makefile.am  Makefile.in
test/.svn/: all-wcprops  entries
test/.svn/text-base/: libjava-front-tests.str.svn-base
test/gnu-classpath/: Makefile  Makefile.am  Makefile.in
test/gnu-classpath/.svn/: all-wcprops  entries
test/gnu-classpath/.svn/text-base/: Makefile.classpath.svn-base
test/gnu-classpath/v1.5/: Makefile  Makefile.in
test/gnu-classpath/v1.5/.svn/: all-wcprops  entries
test/gnu-classpath/v1.5/.svn/text-base/: Makefile.am.svn-base
test/j2sdk/: Makefile  Makefile.in
test/j2sdk/.svn/: all-wcprops  entries
test/j2sdk/.svn/text-base/: Makefile.am.svn-base
test/pp/: Makefile  Makefile.in
test/pp/.svn/: all-wcprops  entries
test/pp/.svn/text-base/: ArryArgs.java.svn-base  Makefile.am.svn-base
test/prettiness/.svn/: all-wcprops  entries
test/prettiness/.svn/text-base/: ForStatements.java.svn-base
test/syn/: Makefile  Makefile.am  Makefile.in
test/syn/.svn/: all-wcprops  entries
test/syn/.svn/text-base/: Makefile.parse-unit.svn-base
test/syn/Java/: Makefile  Makefile.in  comments.testsuite  compilation-unit.testsuite  enum-decs.testsuite  identifiers.testsuite
test/syn/Java/.svn/: all-wcprops  entries
test/syn/Java/.svn/text-base/: Makefile.am.svn-base  annotations.testsuite.svn-base  expressions.testsuite.svn-base  floating-point-literals.testsuite.svn-base  lexical-translations.testsuite.svn-base  statements.testsuite.svn-base  types.testsuite.svn-base
test/syn/StrategoJava/: Main.sdf  Makefile  Makefile.am  Makefile.in  term.testsuite
test/syn/StrategoJava/.svn/: all-wcprops  entries
tools/: Makefile  Makefile.am  Makefile.in  java2py.str  jtree15-to-abox.str  pp-java2py.str  pp-java2py.str~
tools/.deps/: auto-java-front.Po  core-lift-eblocks.Po  java-concat-ids.Po  jtree15-parenthesize.Po  jtree15-to-abox.Po  parse-java.Po  pp-java.Po  pp-java2py.Po
tools/.svn/: all-wcprops  entries
tools/.svn/text-base/: Makefile.am.svn-base  auto-java-front.str.svn-base  core-lift-eblocks.str.svn-base  java-concat-ids.str.svn-base  jtree15-parenthesize.str.svn-base  parse-java.str.svn-base  pp-java.str.svn-base
tools/pp2py/: expression.str  helpers.str  literal.str  main.str  modifier.str  name.str  statement.str
tools/pp2py/class/: enum-declaration.str  method-declaration.str
tools/pp2py/class/.svn/: all-wcprops
tools/pp2py/interface/: annotation-type.str  annotation.str
tools/pp2py/interface/.svn/: all-wcprops  entries
tools/pp2py/interface/.svn/text-base/: annotation.str.svn-base
tools/pp2py/type/: parameterized.str  primitive.str  reference.str  variable.str
tools/pp2py/type/.svn/: all-wcprops  entries
type/: parameterized.str  reference.str  variable.str
(+85 files in other folders)
