include $(top_srcdir)/Makefile.xt

SUBDIRS = tools 
#pkgdata_DATA = j2py.m4

BOOTCLEAN_SUBDIRS = $(SUBDIRS)
DIST_SUBDIRS      = $(SUBDIRS)
EXTRA_DIST        = # TODO $(pkgdata_DATA) Makefile.xt autoxt.m4 #java-front.spec java-front.spec.in java-front.pc bootstrap 
CLEANFILES        = XTC

XTC_IMPORT = $(STRATEGOXT)/share/strategoxt/XTC

ACLOCAL_AMFLAGS = -I .

#pkgconfig_DATA = j2py.pc
